--- a/en/Study-design-3.qmd
+++ b/en/Study-design-3.qmd
@@ -156,155 +156,162 @@ Keywords: clinical trial, hypothesis/outcome/population, survival/competing-risk
 
 ------------------------------------------------------------------------
 
-### アウトカムってなに？
+### What Do We Mean by "Outcome"?
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「さっきのアウトカムについてなんだけどね。診療科内で臨床試験の論文を読むんだけど、そこで出てくる”DFS”とか”RFS”とかの略語もアウトカムだよね？実はよくわからないんだけど、当たり前のように使われているから質問しにくいんだ。DFSとRFS、どっちもがんの再発を調べてるみたいなんだけど。お父さん詳しい？」
+Me: "About that outcome thing we talked about earlier. In our department we read clinical trial papers, and they're full of abbreviations like DFS and RFS. Those are outcomes too, right? To be honest I don't really understand them, but everyone uses them as if they were obvious, so it's hard to ask now. DFS and RFS both seem to be about cancer recurrence. Do you know the difference?" 
 :::
 
 ::: voice-father
-お父さん「もちろん統計解析でDFSを扱うことはあるよ。一番よく出てくるOSは全生存期間（overall survival）だよね。DFSは無病生存期間（disease-free survival）、RFSは無再発生存期間（relapse-free survival）のこと」
+Dad: "Of course. We often deal with DFS in statistical analyses. The one you probably see most is **overall survival (OS)**. DFS stands for **disease-free survival**, and RFS stands for **relapse-free survival**."
 :::
 
 ::: voice-daughter
-私「無再発生存期間って再発までの日数のこと？」
+Me: "So relapse-free survival is just the number of days until recurrence?"
 :::
 
 ::: voice-father
-お父さん「再発までの日数だったら無再発期間(relapse-free time)とかって言葉を選ぶかなあ。累積再発率（cumulative incidence of relapse）やCIRって呼ぶことの方が多いけど」
+Dad: "If we were literally measuring ‘time to recurrence', I'd probably call that relapse-free time. When we focus on recurrence, we often talk about the **cumulative incidence of relapse**, or CIR for short."
 :::
 
 ::: voice-daughter
-私「よけいにわからん。ぜんぶ同じじゃないの？」
+Me: "That just made it worse. Aren't all of these basically the same?"
 :::
 
 ::: voice-father
-お父さん「生存間解析ではね、細かいけど違うんだ。再発を経験せずに、死亡することもあるでしょ。無病生存期間のポイントは、再発・2次がん・死亡のうち、**どれか最初のイベントまでの時間**を扱うこと。だから、再発だけでなく、死亡したり別のがんを発症したりしたときも、イベントとして扱われるんだ」
+Dad: "In survival analysis, the differences are subtle but important. Think about this: a patient can die without ever having a recurrence. For DFS, the key idea is that we measure the **time from the time origin to the first of three events**: recurrence, second primary cancer, or death. So not only recurrence, but also death and second cancers are treated as events."
 :::
 
 ::: voice-daughter
-私「イベント扱いって？」
+Me: "What exactly do you mean by ‘treated as events'?"
 :::
 
 ::: voice-father
-お父さん「生存時間データは、一般に特定のイベントまでの経過時間なんだ。端的にいうとね、無病生存期間のデータから“3年無病生存確率”を計算するとするでしょ。それは“イベントが起こらない確率”に相当するんだけど、意味合いとしては3年時点で、再発も2次がんも経験せず、生存できる確率を求めることになる」
+Dad: "In general, survival time data represent the time until a specified event. To put it simply: suppose you compute the ‘3-year DFS probability' from DFS data. That corresponds to the probability that no event has occurred by 3 years. In other words, the probability that at 3 years the patient is alive, with no recurrence and no second cancer."
 :::
 
 ::: voice-daughter
-私「そういうことか」
+Me: "Okay, that I can follow."
 :::
 
 ::: voice-father
-お父さん「RFSでは、イベントは死亡と再発のするのが普通。つまり二次がんはイベントに含めない。無再発期間だったらイベントは再発だけ。図をみたら、イメージしやすくなるかな」
+Dad: "For RFS, the event is usually defined as recurrence or death. Second cancers are not included. If we were being strict about relapse-free time, then recurrence alone would be the event. Seeing it as a figure would probably make the picture clearer."
 :::
 
-
-![](study-design-2.png)
-
 ::: voice-daughter
-私「ふんふん。私はね、無病生存期間の結果が重要だと思うな。再発と2次がん、どっちも起きない方がいい。無再発期間はあまり解析する意味を感じないな。死亡は一番重要なイベントじゃない？なんで省いちゃうのよ」
+Me: "Mm-hmm. Personally, I feel like DFS is the most important. You'd like to avoid both recurrence and second cancers. Relapse-free time doesn't feel that meaningful to analyze. And death is the most important event, isn't it? Why would you leave it out?"
 :::
 
 ::: voice-father
-お父さん「そうだね。でも、がんが再発した後に死亡した患者は、無再発期間だったとしてもイベント扱いになるよね」
+Dad: "You're right that death is critical. But remember, once a patient has a recurrence and then dies afterwards, they're already counted as an event for relapse-free survival, even if the death is recorded later."
 :::
 
 ::: voice-daughter
-私「確かにね。よく考えたら、再発前に亡くなるケースって、感染症とか、交通事故とかだね。がん治療や原病とは関係ないかもしれない」
+Me: "That's true. If I think about it, deaths that occur before recurrence are often due to things like infections or traffic accidents. Such causes may not be clearly related to the cancer treatment or the cancer itself."
 :::
 
 ::: voice-father
-お父さん「臨床試験で用いられるアウトカムは、”エンドポイント”とよばれることもあるよね。研究によって研究仮説が違うから、それにあわせて様々なエンドポイントが選ばれる。進行がんではがんの増悪に注目した無増悪生存期間、根治切除後の研究では無再発生存期間とかね。表に、がん臨床試験の主な生存時間エンドポイントを整理してあげるよ（Japan Clinical Oncology Group 2021）」
-:::
-
-| エンドポイント | イベント1 | イベント2 | イベント3 | イベント4 | 打ち切り日 |
-|------------|------------|------------|------------|------------|------------|
-| 全生存期間 | 死亡 |  |  |  | 最終生存確認日 |
-| 無増悪生存期間 | 死亡 | 増悪/再発 |  |  | 最終無増悪確認日 |
-| 無再発生存期間 | 死亡 | 再発 |  |  | 最終生存確認日 |
-| 無再発期間 | 再発 |  |  | | 最終生存確認日 |
-| 無病生存期間 | 死亡 | 再発 | 2次がん |  | 最終生存確認日 |
-| 無イベント生存期間 | 死亡 | 寛解導入失敗 | 再発 | 2次がん | 最終生存確認日 |
-| 治療成功期間 | 死亡 | 治療中止（治療中の増悪/再発を含む） | プロトコール治療完了後の増悪/再発 |  | 最終治療継続確認日または最終無増悪確認日 |
-
-::: voice-daughter
-私「でかした！」
-:::
-
-::: voice-father
-お父さん「この表は、臨床試験グループが研究計画書を作るときのものなんだ。研究計画書は、医師や統計家がチームになって書くからね。定義を決めておかないと混乱する。このグループでは"one word one meaning"がモットーなんだ」
-:::
-
-::: voice-daughter
-私「だよね、私もこんがらがり中だわ」
-:::
-
-::: voice-father
-お父さん「OSは、**生存時間の原点（time origin）**から死亡するまでの期間のこと。DFSは、時間原点から再発、2次がん、死亡のうち、最初のイベントまでの期間のこと。でも、さっき言ったみたいに、3年OSとか3年DFSという言い方をすることもある。この場合は期間じゃなくて確率の意味になる。OSとDFSの違いは、再発と2次がんが含まれること。そうすると、3年OSより3年DFSの方が、確率は小さくなるよね」
-:::
-
-::: voice-daughter
-私「時間原点ってはじめて聞いた。もう少し説明してよ」
-:::
-
-::: voice-father
-お父さん「じゃあ、どの時点から生存時間をスタートするか、典型的な決め方をいくつか紹介しようか。まず、DFSは根治手術後の再発状況を調べるため用いられるアウトカムだよね。だから、”手術日”がこの場合の時間原点の候補になる。手術日のように治療の起点がはっきりしている状況だと決めやすいよね」
-:::
-
-::: voice-daughter
-私「あーよくみるやつだわ」
-:::
-
-::: voice-father
-お父さん「でしょ。一方で、もし”退院日”を時間原点にすると、手術直後の死亡が評価対象にならなくなっちゃうから、研究によってはそこを批判されるかもしれない。もうひとつ典型的な決め方を挙げると、臨床試験の登録日があるかな。ランダム化臨床試験だと、登録日に治療をランダムに割付けるから、それを原点にして生存曲線を描くのが自然だよね」
-:::
-
-::: voice-daughter
-私「なるほどね、研究によって微妙に定義が違うもんね。実は今、調査票作っててね。お父さんがアウトカムにうるさいって周りに話したら、みんな意外とちゃんと区別してて。DFSとかOSを正確に知りたかったんだ。聞いてよかった、また相談するね」
+Dad: "Exactly. In clinical trials, outcomes are often called endpoints.
+Different trials have different research hypotheses, and endpoints are chosen accordingly. For advanced cancer, we might focus on tumor progression and use progression-free survival. For post-operative adjuvant chemotherapy after curative surgery, we might use relapse-free survival. Let me show you a table summarizing the main survival endpoints in oncology trials (Japan Clinical Oncology Group, 2021)."
 :::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note appearance="simple"  title="臨床エンドポイントと代替エンドポイント"}
-OS、DFS、RFSは、特に術後補助化学療法の有効性を評価するときに用いられるアウトカム（エンドポイントともいいます）です。それでは両者は、どのような考え方で使い分けられているのでしょうか。指針の1つになっているのが、医薬品の承認審査の考え方です。たとえば抗悪性腫瘍薬の臨床評価方法に関するガイドライン（厚生労働省2021）では、抗がん剤を承認するためには、生存期間の延長などにもとづき、確実な有効性を示す必要があると述べています。そのため、具体的な指標として、OSが**臨床エンドポイント（clinical endpoint）**とみなされ、こちらが重視されています（Biomarkers Definitions Working Group 2001）。
 
-その一方で、術後補助化学療法としての抗がん剤の有効性を評価する臨床試験では、**代替エンドポイント（surrogate endpoint）**として採用することがあります。代替エンドポイントとは、臨床エンドポイントの代わりになることが意図されたもので、臨床上の便益・害の有無を予測することが期待されるものと定義されます。DFSのような代替エンドポイントを用いる最大のメリットは、試験期間が短くなることです。ただし、過去の承認審査では、代替エンドポイントの利用が誤った医薬品評価につながったケースが数多く報告されています（Fleming and DeMets 1996）。たとえば、進行大腸がんにおける5FU+ロイコボリン併用療法は、臨床試験で腫瘍縮小がみられたにもかかわらず、臨床エンドポイントであるOSを評価すると、ほとんど延命効果がないことが明らかになりました（Fleming and DeMets 1996）。
+
+| Endpoint                              | What counts as an event?                                            |
+|---------------------------------------|---------------------------------------------------------------------|
+| Overall survival (OS)                 | Death from any cause                                                |
+| Progression-free survival (PFS)       | Progression or death                                                |
+| Relapse-free survival (RFS)           | Relapse or death                                                    |
+| Cumulative incidence of relapse (CIR) | Relapse only, with death as a competing risk                        |
+| Disease-free survival (DFS)           | Relapse, second cancer, or death                                    |
+| Event-free survival (EFS)             | Death, induction failure, relapse, second cancer (depends on trial) |
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+Me: "Nice. This is really helpful."
 :::
 
-::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
-がん臨床研究で用いられるアウトカムのひとつに無増悪生存期間（progression-free survival）があります。このアウトカムを測定するには、画像による腫瘍増悪の判定が必要になります。このとき、客観性を高めるため、第三者が画像をみて増悪を判定すると、主治医による増悪の判定と一致しないことがあり得ます。この問題は、中央判定と施設判定の不一致と呼ばれます。以下の選択肢のうち、対処法として適切でないものを選びなさい。
-
-1.  統計解析では、客観性が高い中央判定の結果を採用する
-2.  統計解析では、中央判定と施設判定のうち、先に起きたものを採用する
-3.  症例検討会を開き、中央判定と施設判定の結果が一致しない患者の扱いを医学的に決定する
-4.  中央判定を採用した解析と、施設判定を採用した解析の、2通りを行う
+::: voice-father
+Dad: "This table is used when clinical trial groups write their protocols. Protocols are written by a team of clinicians and statisticians. If they don't define things clearly in advance, everything gets confusing later on. Their motto is ‘one word, one meaning'."
 :::
 
-::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
--   **正解は2です**
-
-中央判定と施設判定のうち、先に起きたものを採用すると、無増悪生存期間が短くなる方向にバイアスが生じるため、適切ではありません。
-
-ひとつだけ注意があります。施設判定ではなく中央判定を必ず採用すべき、というわけではありません。施設で増悪になった後、それが追跡状況や画像検査の頻度に影響したり、施設の担当医の治療方針が変化したりすることがあります。このような状況では、施設判定を用いることが適切かもしれません。
+::: voice-daughter
+Me: "Yeah, I can relate. I'm already halfway tangled up."
 :::
 
+::: voice-father
+Dad: "For OS, the outcome is the time from the **time origin** of the analysis until death. For DFS, it's the time from the time origin until whichever happens first: recurrence, second primary cancer, or death. As I mentioned, people also say '3-year OS' or '3-year DFS'. In that case we're not talking about a time, but about the probability at 3 years. Because DFS includes recurrence and second cancers in addition to death, the 3-year DFS probability is necessarily smaller than the 3-year OS probability."
+:::
 
-### 文献
+::: voice-daughter
+Me: "Time origin... I've never heard that expression before. Can you explain that a bit more?"
+:::
+
+::: voice-father
+Dad: "Sure. Let's go over a few typical ways of choosing the time origin. DFS is usually used to evaluate what happens after curative surgery, right? So the date of surgery is a natural candidate for the time origin. When the starting point of treatment is clear, like the day of surgery, the choice is relatively easy."
+:::
+
+::: voice-daughter
+Me: "Yeah, that's what I see a lot in papers."
+:::
+
+::: voice-father
+Dad: "Exactly. On the other hand, if you used the date of discharge as the time origin, then deaths occurring shortly after surgery but before discharge would not be included in the evaluation. Depending on the study, that could easily become a point of criticism. Another common choice is the date of trial registration. In randomized controlled trials, treatment is assigned at registration, so it's natural to use the registration date as the time origin when drawing survival curves."
+:::
+
+::: voice-daughter
+Me: "That makes sense. The exact definitions really do differ a bit from study to study. Actually, I'm in the middle of designing a questionnaire right now. When I told people that you're ‘picky about outcomes', it turned out everyone around me was paying more attention to these distinctions than I'd expected. I wanted to properly understand DFS and OS. I'm glad I asked ? I'll come back for more advice."
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple"  title="Clinical endpoints and surrogate endpoints"}
+
+OS, DFS, and RFS are outcomes or endpoints that are frequently used when evaluating the effectiveness of post-operative adjuvant chemotherapy. How are these endpoints chosen and used? One guiding principle comes from how regulatory agencies evaluate anticancer drugs. For example, the Japanese guideline on clinical evaluation of anticancer drugs states that, in order for an anticancer drug to be approved, its efficacy must be demonstrated reliably, typically through evidence such as prolongation of survival. In this framework, overall survival (OS) is treated as a clinical endpoint and given particular weight (Biomarkers Definitions Working Group, 2001). 
+
+At the same time, in adjuvant chemotherapy trials, endpoints such as DFS are sometimes adopted as surrogate endpoints. A surrogate endpoint is defined as a measure intended to substitute for a clinical endpoint and expected to predict clinical benefit or harm. The main advantage of using surrogate endpoints like DFS is that trials can be completed in a shorter period of time.
+
+However, past regulatory experience has shown that reliance on surrogate endpoints can lead to misleading evaluations of drugs (Fleming and DeMets, 1996). For example, in advanced colorectal cancer, the combination of 5-FU and leucovorin produced promising tumor shrinkage in clinical trials. Yet when the clinical endpoint OS was evaluated, it became clear that the regimen had little or no effect on survival (Fleming and DeMets, 1996).
+:::
+
+::: {.callout-note appearance="simple" title="A quiz related to this episode"}
+
+This quiz focuses on how we define progression and events when using **progression-free survival (PFS)** as an endpoint in clinical trials. To measure PFS, we need to determine tumor progression based on imaging. Sometimes a central review committee evaluates images to make this more objective. In that case, there may be discrepancies between:
+
+- the progression date according to the **central review**, and  
+- the progression date according to the **local investigator**.
+
+This issue is called a disagreement between central and local assessment. Which of the following is not appropriate as a way to handle this in a clinical trial?
+
+1. In the primary analysis, use the results of the central review, which is considered more objective.  
+2. In the primary analysis, define progression as whichever date comes first: central or local.  
+3. Hold a case review meeting and decide how to handle discrepant cases based on medical judgment.  
+4. Perform two analyses: one using central assessment, and one using local assessment.
+:::
+
+::: {.callout-note appearance="simple" collapse="true" title="Answer"}
+-   The correct answer is **2**.
+
+If you define the event as “whichever progression date comes first (central or local)”, you are more likely to shorten PFS artificially, because you systematically choose the earlier of the two dates. That introduces bias.
+
+This doesn’t mean you must always use central review; in some contexts, local assessment may better reflect real clinical decision-making. But “always take the earlier date” is not an appropriate general rule.
+:::
+
+### Reference
 
 - Biomarkers Definitions Working Group. Biomarkers and surrogate endpoints: preferred definitions and conceptual framework. Clin Pharmacol Ther 2001;69(3):89-95
 
 - Fleming TR and DeMets DL. Surrogate end points in clinical trials: are we being misled? Ann Intern Med 1996;125(7):605-13
 
-- [JCOGプロトコールマニュアル version 3.8 [Internet]. 東京: Japan Clinical Oncology Group; 2025](https://jcog.jp/doctor/tool/manual/) 
+- [JCOG protocol manual version 3.8 [Internet]. Tokyo: Japan Clinical Oncology Group; 2025](https://jcog.jp/doctor/tool/manual/) 
 
-- [薬生薬審発0331第1号. 抗悪性腫瘍薬の臨床評価方法に関するガイドライン [Internet]. 東京: 厚生労働省医薬・生活衛生局医薬品審査管理課長; 2021](https://www.pmda.go.jp/files/000243746.pdf)
+### Episodes and R-script
 
-### エピソードとRスクリプト
-
-- [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
-- [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.html)
-- [Outcomes: The Bridge from Data Collection to Analysis](study-design-3.html)
-- [A First Step into Survival and Competing Risks Analysis with R]
+- [A Story of Coffee Chat and Research Hypothesis](study-design-1.qmd)
+- [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.qmd)
+- [A First Step into Survival and Competing Risks Analysis with R](study-design-3.qmd)
+- [Outcomes: The Bridge from Data Collection to Analysis]
 - [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]
 
 - [study-design.R](../from-coffee-chat-to-r/study-design.R)
