--- a/en/publish-a-paper-3.qmd
+++ b/en/publish-a-paper-3.qmd
@@ -156,7 +156,10 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-The sound of early-summer rain softened what remained of the night. After clinic hours, we often spent time together in front of the computer. Tonight again, I sat still, looking at the manuscript glowing on the monitor. Papers, questionnaires, and notes scribbled on paper napkins lay scattered across the desk. I reached for a cup of coffee that had gone cold without my noticing.
+The sound of the rainy season's rain soothes the stillness of the night. After clinic hours, we often spend time at our computers. Tonight, too, I gazed at the manuscript displayed on my monitor. On the desk papers and survey qeforms, and beside a note scribbled on a paper napkin, a Rubik's Cube sat quietly. I reached for the coffee, now lukewarm.
+
+
+The sound of early-summer rain softened what remained of the night. After clinic hours, we often spent time at our computers. Tonight again, I sat still, looking at the manuscript glowing on the monitor. On the desk papers, questionnaires, and beside a note scribbled on a paper napkin, a Rubik's Cube sat quietly. I reached for the coffee, now lukewarm.
 
 Write, pause, return. Again and again.
 :::
