--- a/en/index.qmd
+++ b/en/index.qmd
@@ -9,7 +9,7 @@ listing:
     
   sort: "date desc"
   feed:
-    title: "Coffee and Research – Story and Quiz (EN)"
+    title: "A Conversation on Causality at Our Table"
     items: 20
 ---
 <style>
